# cho.osbase

./: .clang-format  .gitignore  CMakeLatest.txt  CMakeLists.txt  CMakePresets.json  CMakePresets_.json  CMakeSettings.json  README.md  vcpkg-configuration.json  vcpkg.json
src/exe/osBroker/: CMakeLists.txt
src/exe/osBroker/osBrokerApi/: CMakeLists.txt
src/exe/osBroker/osBrokerExe/: CMakeLists.txt
src/exe/osBroker/src/: main.cpp
src/exe/osLauncher/: CMakeLists.txt
src/exe/osLauncher/resources/: launcher.json  launcher.json.in
src/exe/osLauncher/src/: LauncherSettings.h  main.cpp
src/exe/osLog/osLogService/: CMakeLists.txt
src/exe/osLogViewer/: CMakeLists.txt
src/exe/osLogViewer/resources/: logviewersettings.json  logviewersettings.json.in
src/exe/osLogViewer/src/: logviewer.cpp  logviewer.h  logviewerres.h  main.cpp
src/exe/osStateMachineViewer/: CMakeLists.txt
src/exe/osStateMachineViewer/resources/: statemachineviewer.qrc
src/exe/osStateMachineViewer/src/: AbstractStateWidget.cpp  AbstractStateWidget.h  ConnectionDialog.cpp  ConnectionDialog.h  ConnectionDialog.ui  EndStateWidget.cpp  EndStateWidget.h  HistoryStateWidget.cpp  HistoryStateWidget.h  StartStateWidget.cpp  StartStateWidget.h  StateClientArea.cpp  StateClientArea.h  StateMachineWindow.cpp  StateMachineWindow.h  StateMachineWindow.ui  StateTitle.cpp  StateTitle.h  StateWidget.cpp  StateWidget.h  StateWidgetRes.h  TransitionRecord.cpp  TransitionRecord.h  main.cpp
src/exe/osWebViewer/: CMakeLists.txt  osWebViewer.yml  osWebViewer.yml.in
src/exe/osWebViewer/osWebViewerApi/: CMakeLists.txt
src/exe/osWebViewer/osWebViewerImpl/: CMakeLists.txt
src/exe/osWebViewer/osWebViewerService/: CMakeLists.txt
src/lib/osApplication/: CMakeLists.txt  readme.md
src/lib/osApplication/script/: apilex.py  cppbase.py  cppexception.py  cppimpl.py  cppimplcore.py  cppimplheader.py  cppstub.py  cppstubcore.py  cppstubheader.py  osApplication.cmake
src/lib/osApplication/src/: IService.cpp  Process.cpp  ProcessImpl.cpp  ProcessImpl.h  Runner.cpp  ServiceCommandParser.cpp  ServiceConfiguration.cpp  ServiceHandshake.cpp  ServiceOptions.cpp  TaskLoop.cpp  TaskLoopException.cpp  TaskQueue.cpp
src/lib/osCore/: CMakeLists.txt
src/lib/osCore/src/: BasicType.cpp  Check.cpp  Converters.cpp  FactoryManager.cpp  KeyStream.cpp  Observer.cpp  ProcessPID.cpp  RecursiveNamedMutex.cpp  RecursiveNamedMutexImpl.cpp  RecursiveNamedMutexImpl.h  RegisterFactoryGuard.cpp  SharedMemory.cpp  StructuredExceptionHandler.cpp
src/lib/osCoreImpl/: CMakeLists.txt
src/lib/osCoreImpl/src/: RapidJsonStream.cpp  RapidJsonStream.h  RapidXmlPrint.h  RapidXmlStream.cpp  RapidXmlStream.h
src/lib/osData/: CMakeLists.txt
src/lib/osData/src/: ByteBuffer.cpp  DataExchangeDecorator.cpp  IBroker.cpp  IDataExchange.cpp  IExchange.cpp  IFileExchange.cpp  ILogOutput.cpp  IMessaging.cpp  INetwork.cpp  Log.cpp  LogOutputGroup.cpp  Logger.cpp  LoggerMessage.cpp  PagedDataExchange.cpp  Uri.cpp
src/lib/osDataImpl/: CMakeLists.txt
src/lib/osDataImpl/src/: LocalFileExchange.cpp  LocalFileExchange.h  LogOutputAsyncData.cpp  LogOutputAsyncData.h  LogOutputAsyncString.cpp  LogOutputAsyncString.h  LogOutputConsole.cpp  LogOutputConsole.h  LogOutputDataExchange.cpp  LogOutputDataExchange.h  (+17 more)
src/lib/osStateMachine/: CMakeLists.txt  cho.osbase.statemachine.natvis  statemachine.natvis.in
src/lib/osWebEngine/: CMakeLists.txt
tests/: CMakeLists.txt
tests/cmake/: utils.cmake
tests/osApplication_BM/: CMakeLists.txt  service_bm.yml  service_bm.yml.in
tests/osApplication_BM/src/: Server.cpp  Server.h  Service_BM.cpp  Service_BMImpl.cpp  Service_BMImpl.h  Task_BM.cpp  main.cpp
tests/osApplication_UT/: CMakeLists.txt
tests/osApplication_UT/TestService/: CMakeLists.txt  testimport.yml  testimport2.yml  testservice.yml
tests/osApplication_UT/TestServiceImpl/: CMakeLists.txt
tests/osApplication_UT/resources/: TestDomainObjects.yml  TestDomainObjects.yml.in  TestDomainObjectsImport.yml  TestDomainObjectsImport.yml.in  TestEvent.yml  TestEvent.yml.in  TestProcess.yml  TestProcess.yml.in
tests/osApplication_UT/src/: BaseService_UT.h  ServiceDomainObjects_UT.cpp  ServiceEvent_UT.cpp  ServiceProcess_UT.cpp  ServiceSynchro_UT.cpp  Service_UT.cpp  TaskLoop_UT.cpp  TaskQueue_UT.cpp  Task_UT.cpp  TestEventServiceImpl.cpp  TestProcessServiceImpl.cpp  main.cpp
tests/osCoreImpl_UT/: CMakeLists.txt
tests/osCoreImpl_UT/resources/: jsonbadvalues.json  jsonkeylevel.json  jsonvalues.json  xmlbadvalues.xml  xmlkeylevel.xml  xmlmultikey.xml  xmlvalues.xml
tests/osCoreImpl_UT/src/: RapidJsonStream_UT.cpp  RapidXmlStream_UT.cpp  main.cpp
tests/osCore_BM/: CMakeLists.txt
tests/osCore_BM/src/: Serialization_BM.cpp
tests/osCore_UT/: CMakeLists.txt
tests/osCore_UT/Shared/: CMakeLists.txt
tests/osCore_UT/Static/: CMakeLists.txt
tests/osCore_UT/src/: AbstractFactory_UT.cpp  BinaryValue_UT.cpp  KeySerialization_UT.cpp  KeyValue_UT.cpp  LogicException_UT.cpp  Observer_UT.cpp  RecusrsiveNamedMutex_UT.cpp  RuntimeException_UT.cpp  Scope_UT.cpp  Serialization_UT.cpp  SharedMemory_UT.cpp  Singleton_UT.cpp  StructuredException_UT.cpp  main.cpp
tests/osData_UT/: CMakeLists.txt
tests/osData_UT/src/: AsyncData_UT.cpp  ByteBuffer_UT.cpp  IDataExChange_UT.cpp  IFileExchange_UT.cpp  INetwork_UT.cpp  LogOutputAsyncString_UT.cpp  LogOutputConsole_UT.cpp  LogOutputDataExchange_UT.cpp  LogOutputDebug_UT.cpp  LogOutputFile_UT.cpp  LogOutputGroup_UT.cpp  LogOutputNull_UT.cpp  LoggerMessage_UT.cpp  Logger_UT.cpp  Messaging_UT.cpp  PagedDataExchange_UT.cpp  Uri_UT.cpp  main.cpp
tests/osLog_UT/: CMakeLists.txt
tests/osLog_UT/src/: main.cpp
tests/osStateMachine_UT/: CMakeLists.txt
tests/osStateMachine_UT/src/: EndState_UT.cpp  Event_UT.cpp  HistoryState_UT.cpp  StartState_UT.cpp  StateMachine_UT.cpp  StateWriter_UT.cpp  State_UT.cpp  Transition_UT.cpp  main.cpp
tests/osWebEngine_UT/: CMakeLists.txt
tests/osWebEngine_UT/src/: IWebEngine_UT.cpp  main.cpp
tests/osWebViewer_UT/: CMakeLists.txt
tests/osWebViewer_UT/src/: WebViewerRes.h  WebViewer_UT.cpp  main.cpp
(+218 files in other folders)
