set(TESTSERVICEAPI ${APPLICATION}.${UNIT_TEST}.TestService.api)

set(INCLUDE_DIR include)
set(BASE_INCLUDE_DIR ../include)
set(SRC_DIR src)

file(GLOB_RECURSE INCLUDE_FILES ${INCLUDE_DIR}/*)
file(GLOB_RECURSE BASE_INCLUDE_FILES ${BASE_INCLUDE_DIR}/*)
file(GLOB SRC_FILES ${SRC_DIR}/*)
file(GLOB API_FILES *.yml)

add_library(${TESTSERVICEAPI} STATIC ${BASE_INCLUDE_FILES} ${API_FILES} ${INCLUDE_FILES} ${SRC_FILES})

target_include_directories(${TESTSERVICEAPI} PUBLIC ${INCLUDE_DIR} ${BASE_INCLUDE_DIR})
target_link_libraries(${TESTSERVICEAPI} PRIVATE ${APPLICATION})
target_compile_definitions(${TESTSERVICEAPI} PRIVATE SERVICES_DLL_EXPORT)


set(API_INPUT ${CMAKE_CURRENT_SOURCE_DIR}/testservice.yml)
osbase_service_generate_stub(
    TARGET ${TESTSERVICEAPI}
	API ${API_INPUT}
	API_DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/testimport.yml ${CMAKE_CURRENT_SOURCE_DIR}/testimport2.yml
)
