set(LIB_STATIC ${CORE}.${UNIT_TEST}.static)

set(INCLUDE_DIR include)
set(BASE_INCLUDE_DIR ../include)
set(SRC_DIR src)

file(GLOB_RECURSE INCLUDE_FILES ${INCLUDE_DIR}/*)
file(GLOB_RECURSE BASE_INCLUDE_FILES ${BASE_INCLUDE_DIR}/*)
file(GLOB SRC_FILES ${SRC_DIR}/*)

add_library(${LIB_STATIC} STATIC ${BASE_INCLUDE_FILES} ${INCLUDE_FILES} ${SRC_FILES})

target_include_directories(${LIB_STATIC} PUBLIC ${INCLUDE_DIR} ${BASE_INCLUDE_DIR})
target_link_libraries(${LIB_STATIC} PRIVATE ${CORE})
